fix: avoid checkbox layout break on small screens

--- a/src/components/inputs/sq-selector/sq-selector.component.scoped.scss
+++ b/src/components/inputs/sq-selector/sq-selector.component.scoped.scss
@@ -20,6 +20,11 @@
       background: var(--green);
     }
   }
+  input + label.checkbox {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+  }
   input + label.checkbox.bg-secondary {
     background: var(--background_secondary);
   }
